-Add geometrical series

-Now Torben is back. So I corrected bug in kscript. Now Int value
can be transforme in Double Value => Create_formula works fine.
-He works on bugs thanks.

-David Faure works too on bugs, thanks.
So I think that kspread should be the best spread on linux :).

2000-04-09 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add Improved "insert formula"

2000-04-10 -David Faure <faure@kde.org>
---------------------------------------
-Save and restore active table and cell

2000-04-12 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can put a name to an area.

2000-04-13 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can remove an area name.

2000-04-10 -David Faure <faure@kde.org>
---------------------------------------
-Improve error handling : don't abort if a cell is invalid
Still don't know why I get a row = -1 for a cell, but at least it loads.

2000-04-16 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Use kformula icon because they are more nice

2000-04-17 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new mode : formular mode => now you can see formular in cell

2000-04-20 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bug fix

2000-04-21 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add caption in kspread_dlg_layout, kspread_dlg_oszi

2000-04-29 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add two functions : sign which return -1 if number is negative, 1 if positive
and zero when it's null
and atan2
-Start to create help for kspread_dlg_formula
-Improved kspread_dlg_conditionnal